# ormrepo

./: pyproject.toml  pytest.ini
src/ORMrepo/: db_settings.py  exceptions.py  logger.py  models.py  orm.py  types_.py
src/ormrepo/: __init__.py  db_settings.py  exceptions.py  logger.py  mapper.py  models.py  orm.py  types_.py  utils.py
src/tests/: models.py  session.py
src/tests/manual/: config.py  orm_test.py
tests/: conftest.py  models.py  session.py  test_orm.py
tests/manual/: example.py  orm_t.py  orm_test.py  t_t.py  t_t2.py
