[project]
name = "ormrepo"
version = "0.1"
description = ""
authors = [
    {name = "Ivan Maurin",email = "imaurin@totalvideo.ru"}
]
packages = [{ include = "ormrepo", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0"
pydantic = "^2.0"

[poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.0"
asyncpg = "^0.30"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
