[project]
name = "ormrepo"
version = "0.2"
description = "Asynchronous repository pattern with SQLAlchemy 2.0 and Pydantic 2.0 support."
authors = [
    { name = "Ivan Maurin", email = "wahek1999@mail.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sqlalchemy", "pydantic", "repository", "orm", "async", "database", "dto", "pattern"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

urls = { "Homepage" = "https://github.com/wahek/ormrepo" }

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0"
pydantic = "^2.0"

[tool.poetry]
packages = [{ include = "ormrepo", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.0"
asyncpg = "^0.30"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
